--- a/modules/LABENV/pages/index.adoc
+++ b/modules/LABENV/pages/index.adoc
@@ -1,5 +1,8 @@
 = Lab Environment
 
+Instructions for creating a Red Hat OpenShift AI environment that is capable of running multiple LLMs, pipelines, Model Serving and performing just about every task that is possible with OpenShift AI. 
+
+
 == OpenShift Container Cluster Platform (OCP) Environment
 
 We will use the https://demo.redhat.com/catalog?item=babylon-catalog-prod%2Fopenshift-cnv.ocpmulti-wksp-cnv.prod[*Red Hat OpenShift Container Platform Cluster (AWS)*] catalog item in the Red Hat Demo Platform (RHDP) to run the hands-on exercises in this course.
