--- a/modules/ROOT/pages/index.adoc
+++ b/modules/ROOT/pages/index.adoc
@@ -1,27 +1,78 @@
-= Create OpenShift AI Lab Environment
-:navtitle: Home
+= Building the AI Factory - The MaaS Platform
 
-== Introduction
+== From Organic Growth to Intentional Design
 
-Course Title: This is a demo for how to create a lab environment.....
+In most organizations, AI capabilities don't appear overnight; they grow organically. Individual teams, driven by innovation, start their own projects. While this initial spark is vital, organic growth without a plan leads to a complex and inefficient landscape.
 
-Description:
-Course description: Instructions on how to create a lab environment for OpenShift AI 2.12
+=== The State of Organic AI Growth
 
-Duration: 2 hours
+This uncoordinated state is characterized by common challenges:
 
-== Objectives
+ * **Duplicated Infrastructure:** Multiple teams acquire and manage their own expensive GPUs, leading to a fleet of powerful but severely underutilized and costly hardware.
+ * **Redundant Work:** Data scientists across the company download and fine-tune the same foundation models, creating multiple, slightly different versions with no central record.
+ * **Inconsistent Standards:** With no central governance, security practices, data handling, and model versioning are inconsistent, increasing operational and security risks.
+ * **Innovation Bottlenecks:** Developers who need AI capabilities are blocked by the high cost and complexity of sourcing their own models and infrastructure.
 
-On completing this course, you will have a lab environment for OpenShift AI 
+This organic approach, while well-intentioned, cannot scale to meet enterprise demands.
 
-* Using version 2.12
-* No GPU Support
-* Ability to run all OpenShift AI services / solutions
+=== The Vision: The Enterprise "AI Factory"
 
-== Prerequisites
+To move forward, we must shift from organic growth to intentional design. A Models-as-a-Service (MaaS) platform provides this by transforming the scattered AI efforts into a well-run, centralized **"AI Factory."** It is a platform engineering approach to AI, providing models as a managed, secure, and reliable utility for the entire organization.
 
-This course assumes that you have the following prior experience:
+The core principle is simple but powerful:
+[quote]
+Most developers don't want a GPU; they want a stable, secure model endpoint.
 
-* Basic OpenShift Container Platform knowledge
-* Access to the Demo Hub lab platform
+The AI Factory provides exactly that.
 
+'''
+
+== Why Customers Need a MaaS Platform: The Value Proposition
+
+A MaaS platform delivers distinct value to every key stakeholder. As a consultant, your role is to articulate these benefits to the right audience.
+
+.A High-Level View of the MaaS Architecture
+image::MAAS-Arch-drawio.png[MaaS]
+
+=== For the CIO & Business Leaders: Control, Cost, and Compliance
+
+ * **Cost Optimization:** Eliminates redundant hardware by creating a centralized, shared pool of GPUs with high utilization.
+ * **Risk Mitigation:** Prevents data leakage by ensuring all model interactions pass through a secure, governed gateway.
+ * **Governance & Compliance:** Provides a single pane of glass to manage model versions, track usage, and enforce access policies.
+
+=== For the Platform Engineering Team: Standardization and Automation
+
+ * **Centralized Management:** Manage, version, and monitor all enterprise AI models from one place.
+ * **Standardized Deployments:** Enforce consistent security, logging, and performance standards for every deployed model.
+ * **Reduced Operational Burden:** Automate the process of model deployment and access provisioning, freeing up the platform team to focus on improving the platform itself.
+
+=== For Developers & Data Scientists: Speed and Self-Service
+
+* **Instant Access:** Developers can consume powerful, production-ready models via a simple API call, without needing to understand GPUs or Kubernetes.
+* **Accelerated Development:** Dramatically shortens the time from idea to AI-powered application by removing infrastructure bottlenecks.
+* **Self-Service Portal:** Enables developers to browse available models, read documentation, and request access through an automated, streamlined process.
+
+'''
+
+== Anatomy of the AI Factory: The Core Components
+
+A robust MaaS platform is built on three conceptual layers, running on top of OpenShift AI. While customers may use different products for each layer, the function remains the same.
+
+.The Logical Layers of a MaaS Platform
+image::MaaS-ld.png[Logical MaaS Architecture]
+
+The Model Serving Layer (The "Factory Floor")::
+    This is where the AI models are run, typically using an efficient serving runtime like vLLM or KServe (ModelMesh) on OpenShift AI. This layer is responsible for loading the models onto the GPUs and executing inference requests.
+
+The API Gateway Layer (The "Front Door & Security Desk")::
+    This is the crucial control plane through which all requests must pass. It is responsible for:
+    * **Security:** Enforcing authentication and authorization.
+    * **Traffic Management:** Applying rate limiting and usage quotas.
+    * **Routing:** Directing incoming requests to the correct model backend.
+
+The Identity & Observability Layer (The "Access Control & CCTV")::
+    This layer provides the supporting services that make the platform truly enterprise-grade.
+    * **Identity Provider (e.g., Keycloak):** Manages users and provides the authentication tokens needed to access the API Gateway.
+    * **Observability Stack (e.g., Prometheus/Grafana):** Collects metrics on usage, performance, and uptime, which is essential for monitoring, capacity planning, and internal chargeback.
+
+In this module, we will explore how to design and deliver these components to build a complete MaaS solution for your customers.
